[tool.poetry]
name = "loading"
version = "0.1.0"
description = "Matrix data analysis tool"
authors = ["aouassar <aouassar@student.42belgium.be>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.25.0"
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"